@@ -1,0 +1,20 @@
+#!/bin/csh -f
+#
+# PyMOL startup script 
+#
+# 1. Set PYMOL_PATH to point at the correct location on your system.
+#
+setenv PYMOL_PATH ${HOME}/pymol
+#
+# 2. Include PyMOL modules in the Python path.
+#
+if ( $?PYTHONPATH ) then
+setenv PYTHONPATH ${PYMOL_PATH}/modules:${PYTHONPATH}
+else
+setenv PYTHONPATH ${PYMOL_PATH}/modules
+endif
+#
+# 3. Launch PyMOL, with arguments provided.
+#
+/usr/bin/python $PYMOL_PATH/modules/pymol/__init__.py $*
+
