@@ -1,0 +1,23 @@
+#!/bin/csh 
+#
+# C-Shell setup script (ONLY REQUIRED FOR DEBUGGING!)
+#
+# "source" this file before trying to use a debugger with PyMOL
+#
+# 1. Set PYMOL_PATH to point at the correct location on your system.
+#
+setenv PYMOL_PATH ${HOME}/pymol
+#
+# 2. Include PyMOL modules in the Python path.
+#
+if ( $?PYTHONPATH ) then
+setenv PYTHONPATH ${PYMOL_PATH}/modules:${PYTHONPATH}
+else
+setenv PYTHONPATH ${PYMOL_PATH}/modules
+endif
+#
+# 3. Now the user can "gdb python" or "dbx python" and then
+#    "run modules/pymol/__init__.py"
+#
+
+
